--- a/html/soal2.html
+++ b/html/soal2.html
@@ -5,5 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ILC - Marathon 1</title>
   </head>
-  <body></body>
+  <body>
+    <ul>
+      <li>Informatika</li>
+      <li>Sistem Informasi</li>
+      <li>Sains Data</li>
+      <li>Bisnis Digital</li>
+    </ul>
+  </body>
 </html>
