--- a/html/soal3.html
+++ b/html/soal3.html
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ILC - Marathon 1</title>
   </head>
-  <body></body>
+  <body>
+    <span>program studi: </span>
+    <input type="text" name="prodi" />
+  </body>
 </html>
