--- a/html/soal4.html
+++ b/html/soal4.html
@@ -5,5 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ILC - Marathon 1</title>
   </head>
-  <body></body>
+  <style>
+    .form-group {
+      margin-bottom: 1em;
+    }
+  </style>
+  <body>
+    <h1>Halaman Register</h1>
+
+    <form>
+      <div class="form-group">
+        <label for="email">Email: </label>
+        <input
+          id="email"
+          type="email"
+          name="email"
+          placeholder="address@gmail.com"
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="password">Password: </label>
+        <input
+          id="password"
+          type="password"
+          name="password"
+          placeholder="password"
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="profil">Foto Profil: </label>
+        <input id="profil" type="file" name="profil" />
+      </div>
+
+      <div class="form-group">
+        <label for="tanggal_lahir">Tanggal Lahir: </label>
+        <input id="tanggal_lahir" type="date" name="tanggal_lahir" />
+      </div>
+      <div class="form-group">
+        <label for="gender">Gender: </label>
+        <select id="gender" name="gender">
+          <option>Male</option>
+          <option>Female</option>
+        </select>
+      </div>
+
+      <button type="submit">Submit</button>
+    </form>
+  </body>
 </html>
